@@ -1,5 +1,5 @@
 #!/bin/sh -x
-CLASSPATH=../craftbukkit-1.2.3-R0.1.jar:../SERVER-exphc11/plugins-disabled/WorldGuard.jar javac *.java -Xlint:unchecked -Xlint:deprecation
+CLASSPATH=../craftbukkit-1.2.3-R0.1.jar:../SpoutPlugin-1110-1.2.5.jar:../worldguard-5.5.2.jar javac *.java -Xlint:unchecked -Xlint:deprecation
 rm -rf me 
 mkdir -p me/exphc/SilkSpawners
 mv *.class me/exphc/SilkSpawners
